# desktop

./: BPUP_Messanger.csproj  BPUP_Messanger.sln  Form1.Designer.cs  Form1.cs  Program.cs  README.md  package-lock.json  package.json  vite.config.js
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
